[gd_scene load_steps=35 format=2]

[ext_resource path="res://Images/goblinKing.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy's/BlueSlime.gd" type="Script" id=2]
[ext_resource path="res://scenes/EnemySkill.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/GoldToss.gd" type="Script" id=4]
[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/Blink.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/blink.gdshader" type="Shader" id=7]
[ext_resource path="res://scenes/Damage_Mover.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/pointer.png" type="Texture" id=9]

[sub_resource type="ShaderMaterial" id=43]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 513, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 570, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 627, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 684, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 741, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 798, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 855, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 912, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 57, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 114, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 171, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 228, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 285, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 342, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 399, 0, 57, 54 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 456, 0, 57, 54 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ SubResource( 57 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[sub_resource type="Theme" id=11]
default_font = ExtResource( 5 )

[sub_resource type="Animation" id=44]
resource_name = "HitEffect"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=45]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:render_priority")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=46]
resource_name = "stopHiteffect"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Theme" id=47]
default_font = ExtResource( 5 )

[sub_resource type="Animation" id=48]
resource_name = "Damage move up"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -31, -63 ), Vector2( 1, -138 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=49]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 46.25, -26.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="goblin" type="Node2D"]
script = ExtResource( 2 )
Name = "goblin"
Maxhealth = 50
CurrentHealth = 50
Attack = 4
Skill1_CoolDown = 10
Xp_value = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 43 )
position = Vector2( -33, -77 )
scale = Vector2( 5, 5 )
frames = SubResource( 10 )
animation = "idle"
frame = 4
playing = true

[node name="skillControls" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="EnemySkill" parent="skillControls" instance=ExtResource( 3 )]
margin_left = -154.0
margin_top = -212.0
margin_right = -154.0
margin_bottom = -212.0
rect_scale = Vector2( 0.5, 0.5 )
Skill_Name = "MoneyToss"
Attacks_Details = "Money is power"
timerMax = 5

[node name="Message" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="pointer" type="TextureRect" parent="Message"]
visible = false
margin_left = -262.0
margin_top = 106.0
margin_right = -48.0
margin_bottom = 326.0
texture = ExtResource( 9 )
expand = true

[node name="TextBox" type="Label" parent="Message"]
margin_left = -220.0
margin_top = -256.0
margin_right = -53.0
margin_bottom = -84.0
rect_rotation = -0.135561
rect_scale = Vector2( 1.20744, 1.17135 )
theme = SubResource( 11 )
autowrap = true

[node name="Blink" parent="." instance=ExtResource( 6 )]
reset_on_save = false
anims/HitEffect = SubResource( 44 )
anims/RESET = SubResource( 45 )
anims/stopHiteffect = SubResource( 46 )

[node name="Timer" type="Timer" parent="Blink"]

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 46.25
margin_top = -26.25
margin_right = 106.25
margin_bottom = 5.75
theme = SubResource( 47 )
custom_colors/font_color = Color( 0.992157, 0, 0, 1 )
text = "10"

[node name="Damage_Mover" parent="." instance=ExtResource( 8 )]
"anims/Damage move up" = SubResource( 48 )
anims/RESET = SubResource( 49 )

[connection signal="timeout" from="Blink/Timer" to="." method="_on_Timer_timeout"]
